<?xml version="1.0"?>
<package format="2">
  <name>uav_localize</name>
  <version>1.0.0</version>
  <description>Package for localization of UAVs using detections from different inputs</description>

  <author email="vrbamato@fel.cvut.cz">Matouš Vrba</author>
  <maintainer email="vrbamato@fel.cvut.cz">Matouš Vrba</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>message_generation</depend>
  <depend>tf2</depend>
  <depend>tf2_msgs</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_geometry</depend>
  <depend>mrs_lib</depend>
  <depend>nodelet</depend>
  <depend>uav_detect</depend>
  <depend>cnn_detect</depend>
  <depend>message_runtime</depend>

  <export>
    <nodelet plugin="${prefix}/localize_single_nodelet.xml" />

    generate_messages_cpp
  </export>
</package>
